{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 152,
  "lineage": "4bf343d7-3632-34b0-21df-632ecd7801a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:932363963653:instance/i-03ca1bcad4675f34a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03ca1bcad4675f34a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "feb24key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04a35ea4c17d29c56",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-54-145-9-190.compute-1.amazonaws.com",
            "public_ip": "54.145.9.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063902d6db3fabef4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-081bfcd793a8d9937"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bbbece4621d2bf4",
            "tags": {
              "Name": "myjenkinsserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081bfcd793a8d9937"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mainsubnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932363963653:internet-gateway/igw-04a3b4705def0b832",
            "id": "igw-04a3b4705def0b832",
            "owner_id": "932363963653",
            "tags": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0018fad9454333e6a"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "mynetworkint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-04bc24dd70c94abbb",
            "ipv6_address_count": 0,
            "mac_address": "0a:20:5b:61:56:43",
            "private_dns_name": "ip-10-0-1-24.ec2.internal",
            "private_ip": "10.0.1.24",
            "private_ips": [
              "10.0.1.24"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-081bfcd793a8d9937"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bbbece4621d2bf4"
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mainsubnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rti",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0767e5657a3c3f103",
            "owner_id": "932363963653",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a3b4705def0b832",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myjenkinsroutetable"
            },
            "vpc_id": "vpc-0018fad9454333e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab6c58639569bcc7",
            "route_table_id": "rtb-0767e5657a3c3f103",
            "subnet_id": "subnet-04bbbece4621d2bf4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rti",
            "aws_subnet.mainsubnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932363963653:security-group/sg-081bfcd793a8d9937",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081bfcd793a8d9937",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " HTTP Traffic from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " SSH Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow_traffic",
            "name_prefix": "",
            "owner_id": "932363963653",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myjenkinssg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0018fad9454333e6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mainsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932363963653:subnet/subnet-04bbbece4621d2bf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04bbbece4621d2bf4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "932363963653",
            "tags": {
              "Name": "myjenkinsubnet"
            },
            "vpc_id": "vpc-0018fad9454333e6a"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932363963653:vpc/vpc-0018fad9454333e6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc2ca59ea3b79393",
            "default_route_table_id": "rtb-09b772d036da4d93d",
            "default_security_group_id": "sg-02b91c85a555e896a",
            "dhcp_options_id": "dopt-d8c684a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0018fad9454333e6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b772d036da4d93d",
            "owner_id": "932363963653",
            "tags": {
              "Name": "myjenkinsvpc"
            }
          }
        }
      ]
    }
  ]
}